--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 
     <!-- UNICONS -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <title>Ahmad Safrizal</title>
   </head>
